changed background and fixed spacing for desktop version

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  background-color: #000000;
 }
 
 .App-logo {
@@ -14,14 +14,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #000000;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #000000;
 }
 
 .App-link {
@@ -36,6 +36,7 @@
     transform: rotate(360deg);
   }
 }
+
 :root {
   --bg-dark: #000000;
   --bg-light: #DAD0ED;
@@ -47,12 +48,29 @@
   background-color: var(--bg-dark);
   color: var(--text-light);
   font-family: neue-kabel, sans-serif;
-  font-weight: 400;
+  font-weight: 800;
   font-style: normal;
+  padding-bottom: 0%;
+}
+
+.nav-link {
+  color: white;
+  font-size: xx-large;
+}
+
+.nav-link:hover {
+  color: #e05a4e;
+}
+
+hr.nav-bottom-border {
+  border: 2px solid white;
+  border-radius: 2px;
+  width:75%;
+  margin:0 auto;
 }
 
 .logo {
-  /* margin-left: auto;
-  margin-right: auto; */
-  display: block;
+  /* position: absolute; */
+  left: 50%;
+  margin-left: -(128)px
 }
